feat(test): add unit tests to ensure coverage (#8)